--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#JSP
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
 
+#DataSource
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://10.1.4.122:3306/with_us?characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=dlsgk123
+
+#mapper
+mybatis.mapper-locations=mapper/**/*.xml
