--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,10 @@ dependencies {
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
     implementation 'javax.servlet:jstl'
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+    implementation 'net.sf.json-lib:json-lib:2.4:jdk15'
+    implementation 'com.google.code.gson:gson:2.10'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.mariadb.jdbc:mariadb-java-client'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
